--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,23 @@
+# Use Node.js official image as base
 FROM node:18-alpine
+
+# Set working directory
 WORKDIR /app
+
+# Copy package.json and package-lock.json
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the application code
 COPY . .
+
+# Build TypeScript
+RUN npm run build
+
+# Expose port
 EXPOSE 3000
-CMD ["npm", "start"]
+
+# Start the app
+CMD ["node", "dist/app.js"]
