--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,29 @@ services:
     networks:
       - restaurant-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_DATABASE}"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  backend:
+    build: ./backend
+    container_name: backend_app
+    ports:
+      - "3001:3000"
+    environment:
+      - DB_HOST=db          # Use service name 'db' for container-to-container communication
+      - DB_PORT=5432
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - PORT=3000
+      - JWT_SECRET=${JWT_SECRET}
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - restaurant-network
 
 volumes:
   pgdata:
