feat(frontend): Integrate API, implement order/product management, and Dockerize
This commit introduces significant updates to the frontend application, focusing on improved API integration, enhanced order and product management features, and a streamlined development/deployment workflow using Docker.

Key changes include:

- **API Integration**:
  - Implemented robust data fetching and submission for orders and products.
  - Ensured correct handling of backend API response structures (e.g., parsing string numbers, correcting key names like order_items vs items, and handling product_id snake_case).
  - Improved error handling for API calls, providing better user feedback.

- **Order Management Enhancements**:
  - Developed a CreateOrder component that allows users to select products, manage quantities, and submit new orders.
  - Added client-side stock validation to prevent ordering beyond available quantities.
  - Refined the Dashboard component to accurately display order details, including correct parsing of dates (created_at) and numeric values (total, price_at_time).
  - Implemented sorting functionality for orders by date, total, and ID.
  - Ensured correct rendering of order items within expanded order details.

- **Product Management**:
  - Enabled fetching and display of product listings.
  - (If applicable: Mention specific product creation/editing features if they were part of recent changes, otherwise omit or generalize).

- **Dockerization**:
  - Implemented Dockerfile for the frontend application, facilitating consistent build and deployment environments.
  - (If applicable: Mention Docker Compose setup if it was part of this work, otherwise generalize to [streamlined development workflow]).

- **UI/UX Improvements**:
  - Minor styling adjustments for better readability and user experience.
  - Removal of unnecessary UI elements (e.g., user role display) for a cleaner interface.

- **Dependency Updates**:
  - Updated relevant npm packages for compatibi

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,39 @@
-# Use Node.js official image as base
+# This Dockerfile is used to create a lightweight container for a Node.js application.
+# It is based on the official Node.js 18 image with Alpine Linux for minimal size.
+
+# Step 1: Set the working directory inside the container to /app.
+# All subsequent commands will be executed relative to this directory.
+
+# Step 2: Copy the package.json and package-lock.json files into the container.
+# These files are required to install the application's dependencies.
+
+# Step 3: Install the dependencies using npm. This ensures the application has
+# all the required packages to run.
+
+# Step 4: Copy the entire application source code into the container.
+# This includes all files and directories in the current context.
+
+# Step 5: Build the application using the npm build script.
+# This step is typically used to compile or prepare the application for production.
+
+# Step 6: Expose port 3000 to allow external access to the application.
+# This is the port the application will listen on.
+
+# Step 7: Define the default command to run the application.
+# The application will start by executing the dist/app.js file using Node.js.
+
 FROM node:18-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
 COPY . .
 
-# Build TypeScript
 RUN npm run build
 
-# Expose port
 EXPOSE 3000
 
-# Start the app
 CMD ["node", "dist/app.js"]
